--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.18",
+    "gsap": "^3.14.2",
     "motion": "^12.33.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.38.2",
